# bsc-ii-measure

./: Cargo.toml  README.md  TODO.md
bintable/: Cargo.toml
bintable-check-sorted/: Cargo.toml
bintable-check-sorted/src/: main.rs
bintable-info/: Cargo.toml
bintable-info/src/: main.rs
bintable/src/: bintable.rs  lib.rs  tablerow.rs
bintable2/: Cargo.toml  README.md
bintable2/src/: bintable.rs  lib.rs  tablerow.rs  util.rs
ci/: bintable-info.sh  build-sort-check.sh  build.sh  verify.sh
compression-analyzer/: Cargo.toml
compression-analyzer/src/: main.rs
count-occurences/: Cargo.toml
count-occurences/src/: main.rs
dict-front-coding/src/: lib.rs
dict-incremental-coding/: Cargo.toml
dict-incremental-coding-improved/: Cargo.toml
dict-incremental-coding-improved/src/: block.rs  lib.rs  util.rs
dict-incremental-coding/src/: lib.rs
fastpfor/: build.rs
fastpfor/ci/: build-shared-library.sh
fastpfor/src/: bindgen.rs  lib.rs
ii-measure/: Cargo.toml  README.md  build.rs
ii-measure/src/: algorithm.rs  cli.rs  db.rs  inverted_index.rs  kinds.rs  log.rs  main.rs  measure.rs
ii-measure/src/algorithm/: baseline.rs  dedup.rs  frontcoding.rs  incr_adv_ns.rs  incr_adv_ns_adv.rs  incr_ns.rs  incremental.rs  mod.rs  ns.rs  ns_arena.rs  pfor.rs  pfor_split.rs  pfor_x.rs  smaz.rs  smaz_ns.rs  vbyte.rs  vbyte_arena.rs  vbyteincr.rs
ii-measure/src/table_lake/: database.rs  mod.rs  sqlx_adapter.rs
ii-measure/src/util/: mod.rs  random_keys.rs
render-graphs/: README.md  Untitled.ipynb  cardinalit.ipynb  compression-data.csv  compression-rate.ipynb  input-distribution.ipynb  loaddata.py  tableinfo.csv  testing.ipynb
render-graphs/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  testing-checkpoint.ipynb
render-graphs/Histograms/: cocoa_main_tokenized-histo.csv-bitwidth.csv  cocoa_main_tokenized.csv  gittables_main_tokenized-histo.csv  gittables_main_tokenized-histo.csv-bitwidth.csv  gittables_main_tokenized.csv  main_tokenized-histo.csv  main_tokenized.csv  main_tokenized_embedding.csv  mate_main_tokenized.csv  open_data_main_tokenized-histo.csv  open_data_main_tokenized-histo.csv-bitwidth.csv  open_data_main_tokenized.csv  open_data_mate_main_tokenized.csv  table-info.csv
sort-bintable/: Cargo.toml
sort-bintable/src/: main.rs
src/: algorithm.rs  cli.rs  inverted_index.rs  log.rs  main.rs  measure.rs  util.rs
src/table_lake/: bintable.rs  csv_collection.rs  database.rs  mod.rs  tablerow.rs
src/util/: mod.rs  random_keys.rs
subportion-bintable/: Cargo.toml
subportion-bintable/src/: main.rs
table-to-file-2/: Cargo.toml
table-to-file-2/src/: main.rs
verifybts/: Cargo.toml  README.md
verifybts/src/: cli.rs  db.rs  main.rs  util.rs
verifybts/src/table_lake/: database.rs  mod.rs
verifybts/src/util/: mod.rs
