[package]
name = "bintable-check-sorted"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bintable2 = {path = "../bintable2" }
structopt = "0.3.26"               # Parse command line argument by defining a struct.
