[package]
name = "bintable-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bintable = {path = "../bintable" }
get-size = "0.1.1"           # Determine the size in bytes an object occupies inside RAM.
