[package]
name = "bintable-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bintable = {path = "../bintable" }
structopt = "0.3.26"               # Parse command line argument by defining a struct.
