[package]
name = "bintable2"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
int-compression-4-wise = "0.1.1"    # Fast algorithm to compress lists if integers in blocks of 4. Appends 0 to blocks, if length…
lz4_flex = "0.9.5"         # Fastest LZ4 implementation in Rust, no unsafe by default.
fast-smaz = "0.1.0"    # Pure Rust SMAZ compression implementation
varint-compression = "0.2.0"    # variable length integer compression
anyhow = "1.0.65"                                   # Flexible concrete Error type built on std::error::Error

# sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }

# tokio = { version = "1", features = ["full"] }
