[package]
name = "ii-measure"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"                    # Fast CSV parsing with support for serde.
threadpool = "1.8.1"                      # A thread pool for running a number of jobs on a fixed set of worker threads.
anyhow = "1.0.65"                                   # Flexible concrete Error type built on std::error::Error
fallible-iterator = "0.2.0"              # Fallible iterator traits
structopt = "0.3.26"               # Parse command line argument by defining a struct.
rand = "*"
group-varint-encoding = "0.1.0"    # Fast algorithm to compress lists if integers in blocks of 4. Appends 0 to blocks, if length…
lz4_flex = "0.9.5"         # Fastest LZ4 implementation in Rust, no unsafe by default.
fast-smaz = "0.1.0"    # Pure Rust SMAZ compression implementation
varint-compression = "0.1.0"    # variable length integer compression

bintable2 = {path = "../bintable2" }
jemallocator = "0.5.0"                       # A Rust allocator backed by jemalloc
jemalloc-ctl = "0.5.0"         # A safe wrapper over jemalloc's control and introspection APIs

sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }

tokio-stream = "0.1.10"          # Utilities to work with `Stream` and `tokio`.
# Is an Iterator sorted?
is_sorted = "0.1.1"

fastpfor = {path = "../fastpfor" }

dict-front-coding = { path = "../dict-front-coding" }
