[package]
name = "verifybts"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"                                   # Flexible concrete Error type built on std::error::Error
structopt = "0.3.26"               # Parse command line argument by defining a struct.
rand = "*"

bintable = {path = "../bintable" }

sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }

tokio-stream = "0.1.10"          # Utilities to work with `Stream` and `tokio`.
